LPS-170337 Ran buildLang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Adgangskodepolitik er aktiveret (Automatic Translation)
 password-policy-enabled-help=Angiv dette til sand for at bruge LDAP's adgangskodepolitik i stedet for portaladgangskodepolitikken. Hvis den er angivet til true, er det muligt, at portalgenererede adgangskoder ikke svarer til LDAP-politikken. Se egenskaberne "passwords.regexptoolkit.*" for at få oplysninger om konfiguration af RegExpToolkit i forbindelse med generering af disse adgangskoder. Bemærk, at hvis dette er aktiveret, kontrollerer portalen ikke, om der er gyldige adgangskoder, udløbne adgangskoder eller brugere, der er låst ude. Dette håndteres nu af LDAP-serverens adgangskodepolitik. (Automatic Translation)
 password-recovery-is-disabled=Password recovery is disabled. (Automatic Copy)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Adgangskode Reset Notification
 password-reset-required=Adgangskode Reset Required
 password-sent-email=Adgangskode Sent e-mail
