--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=سیاست رمز عبور فعال (Automatic Translati
 password-policy-enabled-help=این را درست تنظیم کنید تا از سیاست رمز عبور LDAP به جای سیاست رمز عبور پورتال استفاده کنید. اگر درست تنظیم شود، این امکان وجود دارد که پورتال رمزهای عبور تولید شده با سیاست LDAP مطابقت نداره. مشاهده "passwords.regexptoolkit.*" خواص برای جزئیات بیشتر در پیکربندی RegExpToolkit در تولید این رمزهای عبور. توجه داشته باشید که اگر این کار فعال باشد، پورتال رمزهای عبور معتبر، رمزهای عبور منقضی شده یا کاربرانی که قفل شده اند را بررسی نخواهد کرد. این در حال حاضر توسط سیاست رمز عبور سرور LDAP رسیدگی می شود. (Automatic Translation)
 password-recovery-is-disabled=بازیابی کلمه عبور غیرفعال است.
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=ایمیل اطلاع‌رسانی هنگام دریافت مجدد رمز عبور
 password-reset-required=نیاز به تغییر کلمه عبور است
 password-sent-email=ایمیل کلمه عبور ارسال شده
