--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -11739,6 +11739,7 @@ password-policy-enabled=Police de mot de passe activée
 password-policy-enabled-help=Réglez ce paramètre sur vrai pour utiliser la police de mot de passe de LDAP à la place de la police de mot de passe du portail. Si le paramètre est sur vrai, il est possible que les mots de passe générés par le portail ne correspondent pas à la politique LDAP. Consultez les propriétés "passwords.regexptoolkit.*" pour obtenir des détails sur la configuration de RegExpToolkit afin de générer ces mots de passe. Veuillez noter que si vous activez ce paramètre, le portail ne vérifiera pas les mots de passe valides, les mots de passe expirés et les utilisateurs verrouillés. Tout cela sera géré par la police de mot de passe du serveur LDAP.
 password-recovery-is-disabled=La récupération de mot de passe est désactivée.
 password-recovery-question-and-answer=Question et réponse de la récupération de mot de passe
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Avis de remise de mot de passe
 password-reset-required=La réinitialisation du mot de passe est exigée
 password-sent-email=Email d'envoi de Mot de passe
