--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Password Policy Enabled (Automatic Copy)
 password-policy-enabled-help=Set this to true to use LDAP's password policy instead of the portal password policy. If set to true, it is possible that portal generated passwords will not match the LDAP policy. See the "passwords.regexptoolkit.*" properties for details on configuring RegExpToolkit in generating these passwords. Note that if this is enabled, the portal will not check for valid passwords, expired passwords, or users that are locked out. This is now handled by the LDAP server's password policy. (Automatic Copy)
 password-recovery-is-disabled=Password recovery is disabled. (Automatic Copy)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Notificación de reestablecemento de contraseña
 password-reset-required=Cambio de contraseña requirido
 password-sent-email=Notificación de contraseña
