--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -11740,6 +11740,7 @@ password-policy-enabled=Jelszavas politika engedélyezve
 password-policy-enabled-help=Állítsa Igaz értékre, ha az LDAP jelszó-politikáját kívánja használnia portál jelszó-politikája helyett. Ha az értéke Igaz, lehet, hogy a portál által generált jelszavak nem felelnek majd meg az LDAP politikának. A jelszógenerálással kapcsolatban a RegExpToolkit konfigurálásáról részleteket a "passwords.regexptoolkit.*" beállításban talál. Megjegyezzük, hogy ha aktiválva van, a portál nem ellenőrzi a jelszavak érvényességét, lejárt állapotát, vagy a kizárt felhasználókat. Ezt most az LDAP kiszolgáló jelszó-politikája kezeli.
 password-recovery-is-disabled=Jelszó visszaállítás nem engedélyezett.
 password-recovery-question-and-answer=Jelszó-visszaállítási kérdés és válasz
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Értesítés a jelszó újra beállításáról
 password-reset-required=Jelszó-visszaállítás szükséges
 password-sent-email=Jelszó által küldött e-mail
