--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=מדיניות סיסמאות מופעלת
 password-policy-enabled-help=הגדר את זה כ-true כדי להשתמש במדיניות הסיסמאות של LDAP במקום במדיניות הסיסמאות של הפורטל. אם מוגדר כ-true, ייתכן שהסיסמאות שמופקות בפורטל לא יתאימו למדיניות של LDAP. לקבלת פרטים על הגדרת התצורה של RegExpToolkit להפקת הסיסמאות עיין במאפיינים "passwords.regexptoolkit.*". שים לב שאם זה מופעל, הפורטל לא יבצע בדיקה אם הסיסמאות חוקיות, תקפות, או אם המשתמשים חסומים. זה יטופל כעת על-ידי מדיניות הסיסמאות של שרת ה-LDAP.
 password-recovery-is-disabled=שחזור סיסמה מופסק.
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=הודעה על איפוס סיסמא
 password-reset-required=נדרש איפוס סיסמא
 password-sent-email=אימייל הנשלח באמצעות סיסמה
