--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -11739,6 +11739,7 @@ password-policy-enabled=パスワード ポリシーが有効です
 password-policy-enabled-help=ポータルのパスワード ポリシーの代わりに、パスワード ポリシーを LDAP を使用する場合は true に設定します。True の場合、ポータルで自動生成されたパスワードが LDAP ポリシーと一致しない場合があります。これらのパスワードを生成する RegExpToolkit の構成の詳細については、「passwords.regexptoolkit.*」プロパティを参照してください。これが有効な場合、ポータルは有効なパスワードや、期限切れのパスワード、ロックアウトされたユーザーを確認しませんので注意してください。現在の状態は、LDAP サーバーのパスワード ポリシーによって処理されています。
 password-recovery-is-disabled=パスワード復旧機能が無効です
 password-recovery-question-and-answer=パスワード復旧用の質問と回答
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=パスワードリセットの通知
 password-reset-required=初回ログイン時にパスワードの変更を必要とする
 password-sent-email=パスワード再発行時の自動送信メール
