--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Slaptažodžio strategija įgalinta (Automatic Translati
 password-policy-enabled-help=Nustatykite, kad tai teisinga, jei norite naudoti LDAP slaptažodžio strategiją, o ne portalo slaptažodžių strategiją. Jei nustatyta kaip teisinga, gali būti, kad portalo sugeneruoti slaptažodžiai nesutaps su LDAP strategija. Daugiau informacijos apie RegExpToolkit konfigūravimą generuojant šiuos slaptažodžius rasite ypatybėse "passwords.regexptoolkit.*". Atminkite, kad jei tai įgalinta, portalas netikrins galiojančių slaptažodžių, nebegaliojančių slaptažodžių arba užrakintų vartotojų. Dabar tai tvarko LDAP serverio slaptažodžio strategija. (Automatic Translation)
 password-recovery-is-disabled=Slaptažodžio atkūrimas išjungtas. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Slaptažodžio nustatymo iš naujo pranešimas (Automatic Translation)
 password-reset-required=Būtinas slaptažodžio nustatymas iš naujo (Automatic Translation)
 password-sent-email=Slaptažodis Išsiųstas el. paštas (Automatic Translation)
