--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Dasar Kata Laluan Didayakan (Automatic Translation)
 password-policy-enabled-help=Tetapkan ini kepada benar untuk menggunakan dasar kata laluan LDAP dan bukannya dasar kata laluan portal. Jika ditetapkan kepada benar, ada kemungkinan portal yang dijana kata laluan tidak akan sepadan dengan dasar LDAP. Lihat sifat "passwords.regexptoolkit.*" untuk butiran mengenai mengkonfigurasi RegExpToolkit dalam menjana kata laluan ini. Sila ambil perhatian bahawa jika ini didayakan, portal ini tidak akan menyemak kata laluan yang sah, kata laluan yang telah luput, atau pengguna yang dikunci. Ini kini dikendalikan oleh dasar kata laluan pelayan LDAP. (Automatic Translation)
 password-recovery-is-disabled=Pemulihan kata laluan dinyahdayakan. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Pemberitahuan Set Semula Kata Laluan (Automatic Translation)
 password-reset-required=Penetapan Semula Kata Laluan Diperlukan (Automatic Translation)
 password-sent-email=Kata Laluan Dihantar E-mel (Automatic Translation)
