--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Política de senha habilitada
 password-policy-enabled-help=Definir como verdadeiro para usar a política de senha do LDAP ao invés da política de senha do portal. Se definido como verdadeiro, é possível que as senhas geradas pelo portal não coincidam com a política do LDAP. Consulte as propriedades "passwords.regexptoolkit.*" para obter mais detalhes sobre a configuração de RegExpToolkit durante a geração dessas senhas. Observe que, se habilitado, o portal não validará a senha, senhas expiradas ou se os usuários estão bloqueados. Isso não é tratado pela política de senha do servidor LDAP.
 password-recovery-is-disabled=Recuperação de senha está desabilitada.
 password-recovery-question-and-answer=Pergunta e resposta de recuperação de senha
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Notificação de Recuperação de Senha
 password-reset-required=Mudança de Senha Obrigatória
 password-sent-email=Email com senha enviado
