--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Включена политика паролей (Automa
 password-policy-enabled-help=Установите это, чтобы использовать политику паролей LDAP вместо политики паролей портала. Если установить на истинный, вполне возможно, что портал генерируемых паролей не будет соответствовать политике LDAP. Подробнее о настройке RegExpToolkit при создании этих паролей можно посмотреть на свойства "passwords.regexptoolkit". Обратите внимание, что если это включено, портал не будет проверять действительные пароли, просроченные пароли или заблокированных пользователей. Теперь этим занимается политика паролей сервера LDAP. (Automatic Translation)
 password-recovery-is-disabled=Восстановление пароля отключено. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Уведомление о сбросе пароля
 password-reset-required=Требуется обнуление пароля
 password-sent-email=Отправка пароля по Email
