--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Politika hesiel zapnutá (Automatic Translation)
 password-policy-enabled-help=Nastavte to tak, aby sa namiesto politiky hesla portálu používala politika hesiel LDAP. Ak je nastavená na hodnotu true, je možné, že portál generované heslá nebude zodpovedať LDAP politiky. Nájdete vo vlastnostiach "passwords.regexptoolkit.*" podrobnosti o konfigurácii RegExpToolkit pri generovaní týchto hesiel. Všimnite si, že ak je táto možnosť zapnutá, portál nebude kontrolovať platné heslá, heslá s uplynutou platnosťou alebo používateľov, ktorí sú uzamknutí. To je teraz spracované LDAP server heslo politiky. (Automatic Translation)
 password-recovery-is-disabled=Obnova hesla nie je povolená.
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Notifikácia o obnovení hesla
 password-reset-required=Reset hesla požadovaný
 password-sent-email=Heslo odoslané na e-mail
