--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Lösenordsprincip aktiverad
 password-policy-enabled-help=Ange detta som sant för att använda LDAP:s lösenordspolicy istället för portalens lösenordspolicy. Om detta anges som sant är det möjligt att portalgenererade lösenord inte matchar LDAP-reglerna. Se egenskapen "passwords.regexptoolkit.* för information om hur du konfigurerar RegExpToolkit för att generera dessa lösenord. Om detta är aktiverat kommer inte portalen att leta efter giltiga lösenord, utgångna lösenord eller låsta användare. Detta hanteras nu av LDAP-serverns lösenordspolicy.
 password-recovery-is-disabled=Återställning av lösenord är inaktiverat.
 password-recovery-question-and-answer=Fråga och svar för återställning av lösenord
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Meddelande om ändrat lösenord
 password-reset-required=Nödvändigt att återställa lösenord
 password-sent-email=E-post med lösenord
