--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Parola İlkesi Etkin (Automatic Translation)
 password-policy-enabled-help=Portal parola ilkesi yerine LDAP'nin parola ilkesini kullanmak için bunu true olarak ayarlayın. True olarak ayarlanırsa, portal tarafından oluşturulan parolalar LDAP ilkesiyle eşleşmez. Bu parolaları oluştururken RegExpToolkit'i yapılandırma hakkında ayrıntılı bilgi için "passwords.regexptoolkit.*" özelliklerine bakın. Bu etkinleştirilirse, portalın geçerli parolaları, süresi dolan parolaları veya kilitlenen kullanıcıları denetlemeyeceğini unutmayın. Bu artık LDAP sunucusunun parola ilkesi tarafından işlenir. (Automatic Translation)
 password-recovery-is-disabled=Parola kurtarma devre dışı bırakıldı. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Şifre Değiştirme Uyarısı
 password-reset-required=Şifre Sıfırlama Gerekli
 password-sent-email=Şifre Gönderme E-postası
