--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Політику паролів увімкнуто (Auto
 password-policy-enabled-help=Встановіть для цього значення true використання політики паролів LDAP замість політики паролів порталу. Якщо встановлено значення true, можливо, створені на порталі паролі не відповідатимуть політиці LDAP. Докладніше про налаштування RegExpToolkit під час створення цих паролів можна дізнатися з властивостей «passwords.regexptoolkit.*». Зауважте, що якщо цей параметр увімкнено, портал не перевірятиме дійсні паролі, термін дії яких минув, або заблокованих користувачів. Зараз це обробляється політикою паролів сервера LDAP. (Automatic Translation)
 password-recovery-is-disabled=Відновлення пароля вимкнуто. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Повідомлення про зміну паролю
 password-reset-required=Необхідне обнулення пароля
 password-sent-email=Відправка паролю по електронній пошті
