--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=سياسة كلمة المرور ممكَّنة
 password-policy-enabled-help=عيّن هذا الخيار على "صواب" لاستخدام سياسة كلمة مرور LDAP. إذا تم تعيين هذ الخيار على "صواب"، فمن المحتمل ألا تتطابق كلمة المرور التي أنشأها المدخل مع سياسة LDPA. راجع خصائص "passwords.regexptoolkit.*" للاطلاع على التفاصيل بشأن تكوين RegExpToolkit في إنشاء كلمة المرور هذه. لاحظ أنه في حالة تمكين هذا الخيار، لن يتحقق المدخل من وجود كلمات مرور صالحة أو كلمات مرور منتهية الصلاحية أو المستخدمين الذين تم حظرهم. يتم التعامل مع هذا الآن بواسطة سياسة كلمة مرور خادم LDAP.
 password-recovery-is-disabled=تم تعطيل استرداد كلمة المرور.
 password-recovery-question-and-answer=سؤال وجواب استرداد كلمة المرور
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=إشعار بإعادة تعيين كلمة المرور
 password-reset-required=مطلوب إعادة تعيين كلمة المرور
 password-sent-email=الرسالة الإلكترونبة لإرسال كلمة السر
