--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Paroolipoliitika on lubatud (Automatic Translation)
 password-policy-enabled-help=Seadke see tõeseks, et kasutada portaali paroolipoliitika asemel LDAP paroolipoliitikat. Kui see on seatud tõeseks, on võimalik, et portaali loodud paroolid ei vasta LDAP-poliitikale. Nende paroolide genereerimisel regExpToolkiti konfigureerimise kohta leiate lisateavet atribuutidest "passwords.regexptoolkit.*". Pange tähele, et kui see on lubatud, ei kontrolli portaal kehtivaid paroole, aegunud paroole ega lukustatud kasutajaid. Seda käsitleb nüüd LDAP-serveri paroolipoliitika. (Automatic Translation)
 password-recovery-is-disabled=Parooli taastamine on keelatud. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Salasõna muutmise teade
 password-reset-required=Vajalik on salasõna algseadistamine
 password-sent-email=Salasõna saadetud e-mail
