--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Kebijakan Kata Sandi Diaktifkan (Automatic Translation)
 password-policy-enabled-help=Atur ini ke true untuk menggunakan kebijakan kata sandi LDAP alih-alih kebijakan kata sandi portal. Jika disetel ke true, ada kemungkinan bahwa kata sandi yang dihasilkan portal tidak akan cocok dengan kebijakan LDAP. Lihat properti "passwords.regexptoolkit.*" untuk detail tentang mengonfigurasi RegExpToolkit dalam menghasilkan kata sandi ini. Perhatikan bahwa jika ini diaktifkan, portal tidak akan memeriksa kata sandi yang valid, kata sandi kedaluwarsa, atau pengguna yang dikunci. Ini sekarang ditangani oleh kebijakan kata sandi server LDAP. (Automatic Translation)
 password-recovery-is-disabled=Pemulihan kata sandi dinonaktifkan. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Pemberitahuan Password berubah
 password-reset-required=Mengatur ulang Password yang diperlukan
 password-sent-email=Password Email terkirim
