--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Politică parolă activată (Automatic Translation)
 password-policy-enabled-help=Setați acest lucru la adevărat pentru a utiliza politica de parolă LDAP în loc de politica de parolă portal. Dacă este setat la adevărat, este posibil ca parolele generate de portal să nu se potrivească cu politica LDAP. Consultați proprietățile "passwords.regexptoolkit.*" pentru detalii despre configurarea RegExpToolkit în generarea acestor parole. Rețineți că, dacă acest lucru este activat, portalul nu va căuta parole valide, parole expirate sau utilizatori care sunt blocați. Acest lucru este acum tratat de politica de parolă a serverului LDAP. (Automatic Translation)
 password-recovery-is-disabled=Recuperarea parolei este dezactivată. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Atentionare Resetare Parola
 password-reset-required=Resetarea Parolei Necesara
 password-sent-email=Email de Trimitere a Parolei
