--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=Pravilnik gesla omogočen (Automatic Translation)
 password-policy-enabled-help=To nastavite tako, da bo namesto pravilnika gesla portala uporabil pravilnik GESLA LDAP. Če je nastavljeno na res, je možno, da se gesla, ustvarjena na portalu, ne ujemajo s pravilnikom LDAP. Oglejte si lastnosti »passwords.regexptoolkit.*« za podrobnosti o konfiguriranju regExpToolkit pri generiranju teh gesel. Upoštevajte, da če je to omogočeno, portal ne bo preveril, ali obstajajo veljavna gesla, gesla, ki so potekla ali uporabniki, ki so zaklenjeni. To zdaj obravnava pravilnik o geselih strežnika LDAP. (Automatic Translation)
 password-recovery-is-disabled=Obnovitev gesla je onemogo čena. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=Sporočilo o spremembi gesla
 password-reset-required=Zamenjati morate geslo
 password-sent-email=E-pošta o poslanem geslu
