--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -11737,6 +11737,7 @@ password-policy-enabled=பாஸ்வேர்டு பாலிசி Enable
 password-policy-enabled-help=Set this to true to use LDAP's password policy instead of the portal password policy. If set to true, it is possible that portal generated passwords will not match the LDAP policy. See the "passwords.regexptoolkit.*" properties for details on configuring RegExpToolkit in generating these passwords. Note that if this is enabled, the portal will not check for valid passwords, expired passwords, or users that are locked out. This is now handled by the LDAP server's password policy. (Automatic Copy)
 password-recovery-is-disabled=கடவுச்சொல் மீட்பு முடக்கப்பட்டுள்ளது.
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
+password-reminder=Password Reminder (Automatic Copy)
 password-reset-notification=கடவுச்சொல் மீட்டமை அறிவிப்பு
 password-reset-required=பாஸ்வேர்டை ரீசெட் செய்வது அவசியம்
 password-sent-email=கடவுச்சொல் அனுப்பப்பட்ட மின்னஞ்சல்
